# stampfly_hal

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PROGRESS.md  LICENSE  PROGRESS.md  README.md  STAMPFLY_HAL_WORK_PLAN.md  monitor_bmi270_test.py  partitions.csv  quick_monitor.py  sdkconfig.defaults  test_bmi270_monitor.py
archive/debug_tests/: README.md
archive/debug_tests/hal/: i2c_debug_test.cpp  spi_debug_test.cpp  uart_debug_test.cpp
archive/scripts/: reset_and_monitor.py  simple_monitor.py
components/stampfly_hal/: CMakeLists.txt
components/stampfly_hal/include/: bmi270.h  bmi270_config.h  bmm150.h  bmp280.h  gpio.h  hal_base.h  i2c_hal.h  ina3221.h  pmw3901.h  rgbled.h  spi_hal.h  stampfly_hal.h  stampfly_hal_base.h  stampfly_memory.h  stamps3_led.h  uart_hal.h  vl53l3cx.h
components/stampfly_hal/src/: bmi270.cpp  bmm150.cpp  bmp280.cpp  gpio.cpp  hal_base.cpp  i2c.cpp  i2c_hal.cpp  ina3221.cpp  pmw3901.cpp  rgbled.cpp  spi.cpp  spi_hal.cpp  stampfly_hal_base.cpp  stampfly_memory.cpp  stamps3_led.cpp  uart.cpp  uart_hal.cpp  vl53l3cx.cpp
components/stampfly_rgbled/: CMakeLists.txt  stampfly_rgbled.cpp
components/stampfly_rgbled/include/: stampfly_rgbled.h
components/stampfly_sensors/: CMakeLists.txt
components/stampfly_utils/: CMakeLists.txt
components/stampfly_utils/include/: stampfly_utils.h
components/stampfly_utils/src/: placeholder.cpp
docs/: BMI270_1600Hz_Implementation_Report.md  BMI270_Config_Upload_Analysis.md  BMI270_Development_Proposal.md  BMI270_Device_Initialization_ja.md  BMI270_Implementation_Spec.md  BMI270_ODR_Configuration.md  ESP-IDF_SPI_Master_Guide_for_StampFly.md
main/: CMakeLists.txt  main.cpp
main/examples/: README.md
utilities/: README.md  flash_monitor.py  monitor.py
